# IluminacaoInteligente

./: CMakeLists.txt  IluminacaoInteligente.c  README.md
lib/: porcentagens.c  porcentagens.h
